fixed firefox qnt counter sign alignment @line58 to 60

--- a/style/st1_pet_shop.css
+++ b/style/st1_pet_shop.css
@@ -55,6 +55,9 @@
 
 .counter {
     float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     height: 18px;
     width: 18px;
